5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1644_2711.log
== TEST (2019-04-14 21:23:21) 
-- CODE:
valor = float(input("Valor disponivel: "))
ticketQtde = int(input("Quantidade de Ticket: "))
ticketValor = float(input("Valor do Ticket: "))
passeQtde = int(input("Quantidade de passes de onibus: "))
passeValor = float(input("Valor da passagem: "))

ticket = ticketQtde * ticketValor
passagem = passeQtde * passeValor
total = ticket + passagem

if total <= valor:
	mensagem = "Suficiente"
else:
	mensagem = "Insuficiente"
	
print upper.mensagem()
-- ERROR:
File "XXXX", line 16
    print upper.mensagem()
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:23:55) 
-- CODE:
valor = float(input("Valor disponivel: "))
ticketQtde = int(input("Quantidade de Ticket: "))
ticketValor = float(input("Valor do Ticket: "))
passeQtde = int(input("Quantidade de passes de onibus: "))
passeValor = float(input("Valor da passagem: "))

ticket = ticketQtde * ticketValor
passagem = passeQtde * passeValor
total = ticket + passagem

if total <= valor:
	mensagem = "Suficiente"
else:
	mensagem = "Insuficiente"
	
print (upper.mensagem())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print (upper.mensagem())
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:24:38) 
-- CODE:
valor = float(input("Valor disponivel: "))
ticketQtde = int(input("Quantidade de Ticket: "))
ticketValor = float(input("Valor do Ticket: "))
passeQtde = int(input("Quantidade de passes de onibus: "))
passeValor = float(input("Valor da passagem: "))

ticket = ticketQtde * ticketValor
passagem = passeQtde * passeValor
total = ticket + passagem

if total <= valor:
	mensagem = "Suficiente"
else:
	mensagem = "Insuficiente"
	
print mensagem.upper()
-- ERROR:
File "XXXX", line 16
    print mensagem.upper()
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:25:02) 
-- CODE:
valor = float(input("Valor disponivel: "))
ticketQtde = int(input("Quantidade de Ticket: "))
ticketValor = float(input("Valor do Ticket: "))
passeQtde = int(input("Quantidade de passes de onibus: "))
passeValor = float(input("Valor da passagem: "))

ticket = ticketQtde * ticketValor
passagem = passeQtde * passeValor
total = ticket + passagem

if total <= valor:
	mensagem = "Suficiente"
else:
	mensagem = "Insuficiente"
	
print (mensagem.upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:25:30) 
-- CODE:
valor = float(input("Valor disponivel: "))
ticketQtde = int(input("Quantidade de Ticket: "))
ticketValor = float(input("Valor do Ticket: "))
passeQtde = int(input("Quantidade de passes de onibus: "))
passeValor = float(input("Valor da passagem: "))

ticket = ticketQtde * ticketValor
passagem = passeQtde * passeValor
total = ticket + passagem

if total <= valor:
	mensagem = "Suficiente"
else:
	mensagem = "Insuficiente"
	
print (mensagem.upper())
-- EXECUTION TIME:
0.193147
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
